--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,10 +17,10 @@ target 'Test1' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!({ 'Flipper' => '0.78.0' })
-  post_install do |installer|
-    flipper_post_install(installer)
-  end
+  #use_flipper!({ 'Flipper' => '0.78.0' })
+  #post_install do |installer|
+  #  flipper_post_install(installer)
+  #end
 end
 
 target 'Test1-tvOS' do
