--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
 name: Test1
-
-on:
+on: 
   push:
     branches: [main]
-  
 jobs:
   build:
     runs-on: [macos-latest]
@@ -13,10 +11,10 @@ jobs:
       XC_SCHEME: ${{ 'Test1' }}
       KEYCHAIN: ${{ 'test.keychain' }}
 
-      CERT_FILE: ${{ '.github/secrets/ios_distribution.p12' }}
-      PROV_FILE: ${{ '.github/secrets/Test1.mobileprovision'}}
-      CERT_FILE_GPG: ${{ '.github/secrets/ios_distribution.p12.gpg' }}
-      PROV_FILE_GPG: ${{ '.github/secrets/Test1.mobileprovision.gpg'}}
+      CERT_FILE: ${{ './.github/secrets/ios_distribution.p12' }}
+      PROV_FILE: ${{ './.github/secrets/Test1.mobileprovision'}}
+      CERT_FILE_GPG: ${{ './.github/secrets/ios_distribution.p12.gpg' }}
+      PROV_FILE_GPG: ${{ './.github/secrets/Test1.mobileprovision.gpg'}}
 
       CERT_PASS: ${{ secrets.CERTS_PWD }}
     steps:
@@ -43,4 +41,3 @@ jobs:
           UUID=`/usr/libexec/PlistBuddy -c 'Print :UUID' /dev/stdin <<< $(security cms -D -i ./$PROVISION)` 
           cp "./$PROVISION" "$HOME/Library/MobileDevice/Provisioning Profiles/$UUID.mobileprovision" 
         done
-
