--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,5 @@ jobs:
     steps:
     - name: Test
       run: |
-        echo "ls -la"
-        echo $GITHUB_WORKSPACE
-        echo $HOME
-        echo $PWD
+        cd ios
     
