--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: Test1
 on: 
   push:
-    branches: [main]
+    branches: main
 jobs:
   build:
-    runs-on: [macos-latest]
+    runs-on: macos-latest
     env:
       XC_VERSION: ${{ '11.4.1' }}
       XC_PROJECT: ${{ 'Test1.xcodeproj' }}
