--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,5 @@ jobs:
       CERT_PASS: ${{ secrets.CERTS_PWD }}
     steps:
     - name: Init
-      run: |
-        cd ios
+      run: cd ios
     
