--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,19 +5,7 @@ on:
 jobs:
   build:
     runs-on: macos-latest
-    env:
-      XC_VERSION: ${{ '11.4.1' }}
-      XC_PROJECT: ${{ 'Test1.xcodeproj' }}
-      XC_SCHEME: ${{ 'Test1' }}
-      KEYCHAIN: ${{ 'test.keychain' }}
-
-      CERT_FILE: ${{ '~/.github/secrets/ios_distribution.p12' }}
-      PROV_FILE: ${{ '~/.github/secrets/Test1.mobileprovision'}}
-      CERT_FILE_GPG: ${{ '~/.github/secrets/ios_distribution.p12.gpg' }}
-      PROV_FILE_GPG: ${{ '~/.github/secrets/Test1.mobileprovision.gpg'}}
-
-      CERT_PASS: ${{ secrets.CERTS_PWD }}
     steps:
     - name: Init
-      run: cd ios
-    
+      run: |
+        cd ios
