--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,10 +37,9 @@ jobs:
         mkdir -p "$HOME/Library/MobileDevice/Provisioning Profiles"
 
         cd ".github/secrets"
-        echo `ls *.mobileprovision`
         for PROVISION in `ls *.mobileprovision`
         do 
-          echo Hello, world! 
           UUID=`/usr/libexec/PlistBuddy -c 'Print :UUID' /dev/stdin <<< $(security cms -D -i ./$PROVISION)` 
           cp "./$PROVISION" "$HOME/Library/MobileDevice/Provisioning Profiles/$UUID.mobileprovision" 
         done
+        echo `ls $HOME/Library/MobileDevice/Provisioning Profiles`
