--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: Test1
 on: 
   push:
-    branches: main
+  branches: [main]
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: [macos-latest]
     env:
       XC_VERSION: ${{ '11.4.1' }}
       XC_PROJECT: ${{ 'Test1.xcodeproj' }}
@@ -18,9 +18,6 @@ jobs:
 
       CERT_PASS: ${{ secrets.CERTS_PWD }}
     steps:
-    - uses: actions/checkout@v2
-    - name: Init
-      run: |
     - name: Configure Keychain
       run: |
         security create-keychain -p "" "$KEYCHAIN"
@@ -37,9 +34,27 @@ jobs:
         mkdir -p "$HOME/Library/MobileDevice/Provisioning Profiles"
 
         cd ".github/secrets"
+        echo `ls *.mobileprovision`
         for PROVISION in `ls *.mobileprovision`
         do 
+          echo Hello, world! 
           UUID=`/usr/libexec/PlistBuddy -c 'Print :UUID' /dev/stdin <<< $(security cms -D -i ./$PROVISION)` 
           cp "./$PROVISION" "$HOME/Library/MobileDevice/Provisioning Profiles/$UUID.mobileprovision" 
         done
-        echo `ls "$HOME/Library/MobileDevice/Provisioning Profiles"`
+    - name: Init
+      run: |
+        npm install
+        cd ios
+        pod install
+    - name: Archive 
+      run: | 
+        mkdir artifacts 
+        xcodebuild archive -project Test1.xcodeproj -scheme Test1 -configuration release -archivePath Test1.xcarchive
+    - name: Export for App Store 
+      run: | 
+        xcodebuild -exportArchive -archivePath Test1.xcarchive -exportOptionsPlist ExportOptions.Plist -exportPath "$XC_EXPORT_PATH" 
+    - name: Upload Artifact 
+      uses: actions/upload-artifact@v2
+      with: 
+        name: Artifacts 
+        path: ./artifacts
