--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,20 +43,18 @@ jobs:
         done
     - name: Init
       uses: actions/setup-node@v1
-
       with:
         node-version: "12.x"
-
       uses: actions/setup-ruby@v1
       with:
         ruby-version: "2.x"
       uses: actions/checkout@v2
-
+    - name: Install
       run: |
         npm install
         cd ios
         pod install
-        
+
     - name: Archive 
       run: | 
         mkdir artifacts 
