--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
       CERT_PASS: ${{ secrets.CERTS_PWD }}
     steps:
     - name: Configure Keychain
+    - uses: actions/checkout@v2
       run: |
         security create-keychain -p "" "$KEYCHAIN"
         security list-keychains -s "$KEYCHAIN"
@@ -48,7 +49,6 @@ jobs:
       with:
         ruby-version: "2.x"
     - name: Init
-      uses: actions/checkout@v2
       run: |
         npm install
         cd ios
