--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,14 @@ jobs:
 
       CERT_PASS: ${{ secrets.CERTS_PWD }}
     steps:
-    - name: Configure Keychain
     - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: "12.x"
+    - uses: actions/setup-ruby@v1
+      with:
+        ruby-version: "2.x"
+    - name: Configure Keychain
       run: |
         security create-keychain -p "" "$KEYCHAIN"
         security list-keychains -s "$KEYCHAIN"
@@ -42,12 +48,6 @@ jobs:
           UUID=`/usr/libexec/PlistBuddy -c 'Print :UUID' /dev/stdin <<< $(security cms -D -i ./$PROVISION)` 
           cp "./$PROVISION" "$HOME/Library/MobileDevice/Provisioning Profiles/$UUID.mobileprovision" 
         done
-      uses: actions/setup-node@v1
-      with:
-        node-version: "12.x"
-      uses: actions/setup-ruby@v1
-      with:
-        ruby-version: "2.x"
     - name: Init
       run: |
         npm install
