--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Test1
+name: react-native-ios-build-ipa
 on: 
   push:
     branches: [main]
@@ -18,13 +18,22 @@ jobs:
 
       CERT_PASS: ${{ secrets.CERTS_PWD }}
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
+    - name: Init
+      uses: actions/checkout@v2
+
+      uses: actions/setup-node@v1
       with:
         node-version: "12.x"
-    - uses: actions/setup-ruby@v1
+
+      uses: actions/setup-ruby@v1
       with:
         ruby-version: "2.x"
+
+      uses: actions/upload-artifact@v1
+      with:
+        name: Test1.ipa
+	path: ios/build/
+
     - name: Configure Keychain
       run: |
         security create-keychain -p "" "$KEYCHAIN"
@@ -48,20 +57,22 @@ jobs:
           UUID=`/usr/libexec/PlistBuddy -c 'Print :UUID' /dev/stdin <<< $(security cms -D -i ./$PROVISION)` 
           cp "./$PROVISION" "$HOME/Library/MobileDevice/Provisioning Profiles/$UUID.mobileprovision" 
         done
-    - name: Init
-      run: |
-        npm install
-        cd ios
-        pod install
-    - name: Archive 
-      run: |
-        mkdir artifacts 
-        xcodebuild archive -project ./Test1.xcodeproj -scheme Test1 -configuration release -archivePath Test1.xcarchive
-    - name: Export for App Store 
-      run: |
-        xcodebuild -exportArchive -archivePath Test1.xcarchive -exportOptionsPlist ExportOptions.Plist -exportPath "$XC_EXPORT_PATH" 
-    - name: Upload Artifact 
-      uses: actions/upload-artifact@v2
-      with: 
-        name: Artifacts
-        path: ./artifacts
+
+    
+    - name: Select latest Xcode
+      run: "sudo xcode-select -s /Applications/Xcode_$XC_VERSION.app"
+
+    - name: Install Fastlane
+      run: cd ios && bundle install && cd ..
+
+    - name: Install Packages
+      run: yarn install
+
+    - name: Install Pods
+      run: cd ios && pod install && cd..
+
+    - name: Execute Fastlane
+      run: cd ios && fastlane github
+
+    #- name: Run Unit and UI Tests
+    #  run: /usr/bin/xcodebuild test -project "$XC_PROJECT" -scheme "$XC_SCHEME" -destination 'platform=iOS Simulator,name=iPhone 11'
