--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,10 @@ jobs:
     #  with:
     #    ruby-version: "2.x"
     - name: Run Unit and UI Tests 
-      run: /usr/bin/xcodebuild test -project "$XC_PROJECT" -scheme "$XC_SCHEME" -destination 'platform=iOS Simulator,name=iPhone 11'
+      run: |
+        cd ios
+        /usr/bin/xcodebuild test -project "$XC_PROJECT" -scheme "$XC_SCHEME" -destination 'platform=iOS Simulator,name=iPhone 11'
+        cd ..
     - name: Configure Keychain
       run: |
         security create-keychain -p "" "$KEYCHAIN"
