--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
     #- name: Run Unit and UI Tests 
     #  run: |
     #    cd ios
-    #    /usr/bin/xcodebuild test -project "$XCODE_PROJECT" -scheme "$XCODE_SCHEME" -destination 'platform=iOS Simulator,name=iPhone 11'
+    #    /usr/bin/xcodebuild test -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" -destination 'platform=iOS Simulator,name=iPhone 11'
     #    cd ..
     - name: Set up Codesign
       run: |
@@ -53,16 +53,16 @@ jobs:
       run: |
         mkdir artifacts
         npm install
-        react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios
+        npx react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios
         cd ios
         pod install --repo-update
 
-        #xcodebuild archive -project Test1.xcodeproj -scheme Test1 -configuration release -archivePath Test1.xcarchive
+        #xcodebuild archive -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" -configuration release -archivePath "$XCODE_SCHEME.xcarchive"
         xcodebuild build -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
 
     - name: Export for App Store
       run: | 
-        xcodebuild -exportArchive -archivePath Test1.xcarchive -exportOptionsPlist ExportOptions.Plist -exportPath "$XCODE_EXPORT_PATH"
+        xcodebuild -exportArchive -archivePath "$XCODE_SCHEME.xcarchive" -exportOptionsPlist ExportOptions.Plist -exportPath "$XCODE_EXPORT_PATH"
     - name: Upload Artifact 
       uses: actions/upload-artifact@v2 
       with: 
